fix(maven-plugin): keep pom dependency order stable
Co-Authored-By: Claude Opus 5.5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01GV6KMrMdE2nVHuY9skJ66p